# 3824B1FI2_4

./: README.md  Отчет.docx
.github/workflows/: labeler.yml  main.yml
BolshakovV/Lab№1.4/: Lab№1.4.sln
BolshakovV/Lab№1.4/Lab№1.4/: Lab№1.4.vcxproj  test.cpp
BolshakovV/Lab№1.4/Project1/: Header.h  Project1.vcxproj  Source.cpp
BolshakovV/Lab№2.4/Lab№2.4/: test.cpp
BolshakovV/Lab№2.4/Project1/: Experiments.h  Source.cpp  Tables.h
DmitrievA/Lab1/: Lab1.sln  Отчёт.docx
DmitrievA/Lab1/Polinom/: List.h  Main.cpp  Polinom.h  Polinom.vcxproj  Polinom.vcxproj.filters  Polinome.cpp
DmitrievA/Lab1/Tests/: Tests.vcxproj  test.cpp
IvlevA/: Test.cpp
NenevA/Lab1/: Lab1.sln
NenevA/Lab1/App/: App.cpp  App.vcxproj  App.vcxproj.filters  (+2 more)
NenevA/Lab2/: Lab2.sln
PosohinA/Lab1/: CMakeLists.txt  Отчет.docx
PosohinA/Lab2/: CMakeLists.txt
PosohinA/Lab2/lib_interface/: interface.cpp  interface.h
PosohinA/Lab2/lib_list/: list.cpp  list.h
PosohinA/Lab2/lib_polynomial/: polynomial.cpp  polynomial.h
PosohinA/Lab2/lib_table/: CMakeLists.txt  table.h  table_AVL.h  table_hash.h  table_vector.h
PosohinA/Lab2/main/: main.cpp
PosohinA/Lab2/tests/: test_list.cpp  test_polynomial.cpp  test_table_AVL.cpp  test_table_hash.cpp  test_table_vector.cpp
PosohinA/lib_interface/: interface.cpp  interface.h
PosohinA/lib_list/: list.cpp  list.h
PosohinA/lib_polynomial/: CMakeLists.txt  polynomial.cpp  polynomial.h
PosohinA/lib_table/: CMakeLists.txt  table.h  table_AVL.h
PosohinA/main/: main.cpp
PosohinA/tests/: test_polynomial.cpp
ShcherbakovN/Lab1/: Lab1.slnx
(+70 files in other folders)
